# VeracryptRunner

./: .gitignore  CMakeLists.txt  Messages.sh  README.md  install.sh
src/: CMakeLists.txt  VeracryptVolume.h  VeracryptVolumeManager.h  veracryptrunner.cpp  veracryptrunner.h
src/config/: VeracryptConfigItem.cpp  VeracryptConfigItem.h  plasma-runner-veracryptrunner_config.desktop  veracryptrunner_config.cpp  veracryptrunner_config.h  veracryptrunner_config.ui  veracryptrunner_config_item.ui
src/runner/: VolumeCommandBuilder.h  plasma-runner-veracryptrunner.desktop  veracryptrunner.cpp  veracryptrunner.h
